force-app/main/default/objects/Account/fields/Balance_Payable__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payable__c</fullName>
    <label>Balance Payable</label>
    <summarizedField>Order__c.Amount_To_Be_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Order__c.Order_Type__c</field>
        <operation>equals</operation>
        <value>Purchase</value>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>