force-app/main/default/objects/Account/fields/Contact_ID_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_for_Email__c</fullName>
    <label>Contact ID for Email</label>
    <length>25</length>
    <type>Text</type>
</CustomField>