force-app/main/default/objects/Account/fields/CSK__c.field-meta.xml
<CustomField>
    <fullName>CSK__c</fullName>
    <label>Players</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MS Dhoni</fullName>
            </value>
            <value>
                <fullName>Jaddu</fullName>
            </value>
            <value>
                <fullName>Ruttu</fullName>
            </value>
            <value>
                <fullName>Rohit Sharma</fullName>
            </value>
            <value>
                <fullName>Suryakumar Yadhav</fullName>
            </value>
            <value>
                <fullName>bumrah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>