force-app/main/default/objects/Account/fields/Email_for_Communication__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Communication__c</fullName>
    <label>Email for Communication</label>
    <type>Email</type>
</CustomField>