force-app/main/default/objects/Account/fields/hasCovidPass__c.field-meta.xml
<CustomField>
    <fullName>hasCovidPass__c</fullName>
    <label>hasCovidPass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
                <default>true</default>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Has Covid Pass</fullName>
            </value>
            <value>
                <fullName>No Covid Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>