force-app/main/default/objects/Account/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Order__c.Total_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Order__c.Order_Type__c</field>
        <operation>equals</operation>
        <value>Purchase</value>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>