force-app/main/default/objects/Account/fields/Total_Payable_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Invoices__c</fullName>
    <label>Total Payable Invoices</label>
    <summaryFilterItems>
        <field>Order__c.Order_Type__c</field>
        <operation>equals</operation>
        <value>Purchase</value>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>