force-app/main/default/objects/Account/fields/Total_Receivable_Invoices_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Receivable_Invoices_Quantity__c</fullName>
    <label>Total Receivable Invoices Quantity</label>
    <summarizedField>Order__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Order__c.Order_Type__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>Order__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>