force-app/main/default/objects/Account/recordTypes/apac.recordType-meta.xml
<RecordType>
    <fullName>apac</fullName>
    <active>false</active>
    <label>apac</label>
</RecordType>