force-app/main/default/objects/Account/recordTypes/CSK.recordType-meta.xml
<RecordType>
    <fullName>CSK</fullName>
    <active>true</active>
    <label>CSK</label>
</RecordType>