force-app/main/default/objects/Account/recordTypes/emea.recordType-meta.xml
<RecordType>
    <fullName>emea</fullName>
    <active>true</active>
    <label>emea</label>
</RecordType>