force-app/main/default/objects/Account/recordTypes/MI.recordType-meta.xml
<RecordType>
    <fullName>MI</fullName>
    <active>true</active>
    <label>MI</label>
</RecordType>